FIX: check if list is empty or null in priceCheck method and print a msg to the user